[fix]: 修正与ae2的加载顺序

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -66,12 +66,12 @@ side = "BOTH"
 modId = "ae2"
 mandatory = true
 versionRange = "${ae2_version_range}"
-ordering = "NONE"
+ordering = "AFTER"
 side = "BOTH"
 
 [[dependencies.${mod_id}]]
 modId = "jei"
 mandatory = false
 versionRange = "${jei_version_range}"
-ordering = "AFTER"
-side = "BOTH"
+ordering = "NONE"
+side = "CLIENT"
