--- a/build.gradle
+++ b/build.gradle
@@ -174,6 +174,7 @@ dependencies {
 
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
 
+    compileOnly fg.deobf("mezz.jei:jei-${minecraft_version}-forge:${jei_version}")
     compileOnly fg.deobf("org.appliedenergistics:guideme:${guideme_version}")
     compileOnly fg.deobf("appeng:appliedenergistics2-forge:${ae2_version}")
 
