--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -71,7 +71,7 @@ side = "BOTH"
 
 [[dependencies.${mod_id}]]
 modId = "jei"
-mandatory = false
+mandatory = true
 versionRange = "${jei_version_range}"
 ordering = "NONE"
 side = "CLIENT"
